[tool.poetry]
name = "13-0-demo"
version = "0.1.0"
description = ""
authors = ["AmeliPulen <139628158+AmeliPulen@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "13_0_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
